--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <p>
             {{ form.name.label }}<br>
             {{ form.name(size=32) }}
-            {{% for error in form.name.errors %}
+            {% for error in form.name.errors %}
                 <span style="color: red;">[{{ error }}]</span>
             {% endfor %}
         </p>
