--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -2,12 +2,12 @@
 
 {% block title %}
 
-Home
+Аккаунт
 
 {% endblock %}
 
 {% block content %}
 
-<h1>Добро пожаловать на домашнюю страницу!</h1>
+<h1>Это страница вашего аккаунта</h1>
 
 {% endblock %}
