add code edit prof form

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,17 +11,18 @@
 <body>
 
     <nav>
-            <ul>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-                {% if current_user.is_authenticated %}
-                    <li><a href="{{ url_for('account') }}">Account</a></li>
-                    <li><a href="{{ url_for('logout') }}">Logout</a></li>
-                {% else %}
-                    <li><a href="{{ url_for('login') }}">Login</a></li>
-                    <li><a href="{{ url_for('register') }}">Register</a></li>
-                {% endif %}
-            </ul>
-    </nav>
+    <ul>
+        <li><a href="{{ url_for('home') }}">Home</a></li>
+        {% if current_user.is_authenticated %}
+            <li><a href="{{ url_for('account') }}">Account</a></li>
+            <li><a href="{{ url_for('edit_profile') }}">Edit Profile</a></li>  <!-- Новая ссылка на страницу редактирования профиля -->
+            <li><a href="{{ url_for('logout') }}">Logout</a></li>
+        {% else %}
+            <li><a href="{{ url_for('login') }}">Login</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
+        {% endif %}
+    </ul>
+</nav>
     <div>
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
